--- a/src/Components/Proteins/Proteins.css
+++ b/src/Components/Proteins/Proteins.css
@@ -2,6 +2,7 @@
     color: white;
     font-size: 35px;
     font-weight: 700;
+    font-family: 'Roboto Slab', serif;
 }
 @media only screen and (min-width: 688px){
     .proteins-container{
